# job-research

./: .env.example  .gitignore  README.md  pyproject.toml
.streamlit/: config.toml
sql/ddl/: 01_staging.sql  02_intermediate.sql  03_dimensions.sql  04_facts.sql  05_marts.sql  06_runs.sql  07_user_config.sql  08_judged.sql  09_triage_labels.sql
sql/dml/: 10_upsert_dim_location.sql  11_upsert_dim_salary.sql  12_upsert_dim_skill.sql  20_upsert_fact.sql  21_upsert_bridge.sql  30_refresh_mart_jobs_by_country.sql  31_refresh_mart_skills_by_keyword.sql  32_refresh_mart_salary_by_keyword.sql  33_refresh_mart_work_mode_distribution.sql
src/job_research/: __init__.py  config.py  constants.py  corrective_loop.py  cross_encoder_scorer.py  database.py  enricher.py  llm_providers.py  logging_setup.py  pipeline.py  schemas.py  scraper.py  semantic_scorer.py  setfit_classifier.py  transform.py
src/job_research/app/: common.py  main.py
src/job_research/app/pages/: 1_results.py  2_search.py  3_llm.py  4_run.py  5_history.py  6_triage.py
tests/: conftest.py  test_app_common.py  test_config.py  test_corrective_loop.py  test_cross_encoder_scorer.py  test_database.py  test_enricher.py  test_llm_providers.py  test_pipeline.py  test_scraper.py  test_semantic_scorer.py  test_setfit_classifier.py  test_transform.py
