[project]
name = "job-research"
version = "0.1.0"
description = "Scrape, enrich, and analyze job listings across LinkedIn, Indeed, Glassdoor, Google Jobs."
readme = "README.md"
requires-python = ">=3.13"
authors = [{ name = "Bruno" }]
license = { text = "MIT" }

dependencies = [
    # Scraping
    "python-jobspy>=1.1.82",
    # LLM providers
    "anthropic>=0.39.0",
    "openai>=2.32.0",
    # Database
    "duckdb>=1.5.2",
    # Orchestration
    "prefect>=3.6.0,<4.0",
    # Dashboard
    "streamlit>=1.56.0",
    "plotly>=5.24",
    # Config & validation
    "pydantic>=2.13.0",
    "pydantic-settings>=2.14.0",
    # HTTP
    "httpx>=0.28.1",
    # Logging
    "structlog>=24.4",
    # Data
    "pandas>=2.2",
    "pyarrow>=17.0",
    # Country code helpers
    "pycountry>=24.6",
    # Semantic similarity (bi-encoder)
    "sentence-transformers>=3.0,<4.0",
    "torch>=2.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.0",
    "pyright>=1.1.380",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "pytest-mock>=3.14",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/job_research"]

[tool.ruff]
line-length = 88
target-version = "py313"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "F", "W",   # pycodestyle + pyflakes
    "I",             # isort
    "UP",            # pyupgrade
    "B",             # flake8-bugbear
    "SIM",           # flake8-simplify
    "TID",           # tidy-imports
    "RUF",           # ruff-specific
    "N",             # pep8-naming
    "S",             # flake8-bandit (security)
    "PTH",           # flake8-use-pathlib
]
ignore = [
    "E501",          # line length handled by formatter
    "S101",          # assert is fine in tests
    "N817",          # allow camelcase/short aliases in imports
    "N812",          # allow lowercase module imported as uppercase alias (constants as C)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S"]
"src/job_research/app/**" = ["S"]  # Streamlit scripts don't need all security lints
"src/job_research/app/pages/*.py" = ["S", "N999"]  # numeric-prefixed page filenames are a Streamlit convention

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pyright]
include = ["src", "tests"]
pythonVersion = "3.13"
typeCheckingMode = "standard"
reportMissingImports = true
reportMissingTypeStubs = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra --strict-markers --tb=short"
